--- a/Part 1/1.1
+++ b/Part 1/1.1
@@ -1,1 +1,6 @@
-
+[a206720289:~/devops-with-docker]$ docker ps -a
+CONTAINER ID   IMAGE     COMMAND                  CREATED          STATUS                      PORTS     NAMES
+7701e11b3873   nginx     "/docker-entrypoint.…"   51 seconds ago   Up 51 seconds               80/tcp    mystifying_pike
+68e9f3b7c608   nginx     "/docker-entrypoint.…"   3 minutes ago    Exited (0) 59 seconds ago             pedantic_cartwright
+9b5b9f98a8b4   nginx     "/docker-entrypoint.…"   4 minutes ago    Exited (0) 4 minutes ago              pensive_kapitsa
+[a206720289:~/devops-with-docker]$ 
